--- a/frontend/src/pages/Authentication/style.css
+++ b/frontend/src/pages/Authentication/style.css
@@ -35,6 +35,10 @@ button {
   cursor: pointer;
 }
 
+h1 {
+  text-align: center;
+}
+
 h2 {
   font-size: 30px;
 }
@@ -52,6 +56,12 @@ h2 {
   text-align: center;
 }
 
-.join span {
-  color: #0a66c2;
+span {
+  color: blue;
+}
+
+.agreement {
+  text-align: center;
+  margin: 10px;
+  color: gray;
 }
