--- a/frontend/src/pages/Home/style.css
+++ b/frontend/src/pages/Home/style.css
@@ -21,7 +21,7 @@
 .header_logo {
   background-color: #fff;
   flex-grow: 0;
-  margin-right: 1rem; /* Add margin for spacing */
+  margin-right: 1rem;
 }
 
 .header_logo img {
@@ -33,14 +33,14 @@
   background-color: #fff;
   display: flex;
   flex-grow: 1;
-  position: relative; /* For search icon positioning */
+  position: relative;
 }
 
 .header_search input {
   background-color: #f1f1f1;
   border: none;
   border-radius: 4px;
-  padding: 0.5rem 1rem 0.5rem 3rem; /* Adjust padding for icon */
+  padding: 0.5rem 1rem 0.5rem 3rem;
   width: 40%;
   font-size: 1rem;
 }
@@ -69,3 +69,34 @@
   font-weight: 500;
 }
 
+.post-box {
+  display: flex;
+  width: 40vw;
+  margin: 30px 30%;
+  padding: 10px;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: #f9f9f9;
+}
+
+.post-box img {
+  background-color: #fff;
+  border-radius: 50%;
+  width: 40px;
+  height: auto;
+}
+
+.post {
+  background-color: #fff;
+  display: flex;
+  flex-grow: 1;
+  position: relative;
+}
+
+.post input {
+  background-color: #fff;
+  border-radius: 20px;
+  width: 100%;
+  font-size: 1rem;
+}
