--- a/frontend/src/pages/Home/style.css
+++ b/frontend/src/pages/Home/style.css
@@ -77,7 +77,7 @@
   gap: 10px;
   align-items: center;
   justify-content: center;
-  background-color: #f9f9f9;
+  background-color: #fff;
 }
 
 .add_post-box img {
@@ -102,14 +102,20 @@
 }
 
 .post-box {
-  display: flex;
   width: 40vw;
   margin: 30px 30%;
   padding: 10px;
   gap: 10px;
   align-items: center;
   justify-content: center;
-  background-color: #f9f9f9;
+  background-color: #fff;
+}
+
+.info {
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+  background-color: #fff;
 }
 
 .post-box img {
@@ -127,6 +133,25 @@
 }
 
 .description {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+}
+
+.name {
+    background-color: #fff;
+}
+
+.position {
+  color: gray;
+  background-color: #fff;
+}
+
+.image img {
+    background-color: #fff;
+  margin-top: 10px;
+  border-radius: 0;
+  width: 100%;
+  height: 100%;
 }
